<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">Alarm Morning</string>
    <string name="menu_day_header">Alarm at <xliff:g example="07:00" id="time">%1$s</xliff:g> on <xliff:g example="Sat" id="dayOfWeek">%2$s</xliff:g>, <xliff:g example="23/12" id="date">%3$s</xliff:g></string>
    <string name="menu_day_header_disabled">Alarm disabled on <xliff:g example="Sat" id="dayOfWeek">%1$s</xliff:g>, <xliff:g example="23/12" id="date">%2$s</xliff:g></string>
    <string name="permission_missing_title">Missing permission</string>
    <string name="permission_missing_message_detail__camera">You enabled the \"blink flashlight\" feature in the settings.</string>
    <string name="permission_missing_message_detail__record_audio">You enabled the \"sound volume detector\" feature. This feature allows checking  that the alarm volume is correct and recognize the clap gesture (and perform e.g. a snooze action).</string>
    <string name="permission_missing_message_grant">Grant the corresponding Android permission in the next dialogue.</string>
    <string name="permission_missing_message_combine">%1$s\n\n%2$s</string>
    <string name="permission_missing_button">OK</string>
    <string name="permission_missing_SYSTEM_ALERT_WINDOW_title">Missing \"Display over other apps\" permission</string>
    <string name="permission_missing_SYSTEM_ALERT_WINDOW_message">The app needs this permission to be able to appear when the alarm goes off.\n\nGrant the permission in the next screen.</string>
    <string name="title_activity_defaults">Default alarms</string>
    <string name="change_others_title">Set alarm to <xliff:g example="07:00" id="time">%1$s</xliff:g> on <xliff:g example="Sat" id="dayOfWeek">%2$s</xliff:g> too?</string>
    <string name="menu_default_header">Alarms at <xliff:g example="07:00" id="time">%1$s</xliff:g> on <xliff:g example="Sat" id="dayOfWeek">%2$s</xliff:g></string>
    <string name="menu_default_header_disabled">Alarms disabled on <xliff:g example="Sat" id="dayOfWeek">%1$s</xliff:g></string>
    <string name="title_activity_settings">Settings</string>
    <string name="holidays_none">None</string>
    <string name="holidays_all">All</string>
    <string name="holidays_list_title">List of holidays:</string>
    <string name="holidays_recommendations">We recommend one of the automatically detected countries:</string>
    <string name="holidays_setting">Actual setting:</string>
    <plurals name="snooze_time_text">
        <item quantity="one">Snooze for %d minute</item>
        <item quantity="other">Snooze for %d minutes</item>
    </plurals>
    <string name="test_panic_title">The panic is on!</string>
    <string name="test_panic_message">The buzzer sounds, the vibration is on and flashlight is flashing.\n\nIf something is not working, then you haven\'t granted the respective Android permission or the device isn\'t capable of doing this.</string>
    <string name="test_panic_button">Stop</string>
    <string name="title_activity_ring">Alarm</string>
    <string name="alarm_was_set_to_today">Alarm was set to <xliff:g example="07:00" id="time">%1$s</xliff:g></string>
    <string name="alarm_was_set_to_nontoday">Alarm was set to <xliff:g example="07:00" id="time">%1$s</xliff:g> on <xliff:g example="Tuesday, April 12, 1952" id="dateFull">%2$s</xliff:g></string>
    <string name="muted">Muted for <xliff:g example="5" id="seconds">%1$d</xliff:g> seconds</string>
    <string name="next_calendar_with_location">Next appointment: <xliff:g example="07:00" id="time">%1$s</xliff:g> <xliff:g example="Dentist" id="title">%2$s</xliff:g> (<xliff:g example="Main St" id="location">%3$s</xliff:g>)</string>
    <string name="next_calendar_without_location">Next appointment: <xliff:g example="07:00" id="time">%1$s</xliff:g> <xliff:g example="Dentist" id="title">%2$s</xliff:g></string>
    <string name="no_sound_detected">No sound detected. Panic (buzzer, vibration, flashlight) started.</string>
    <string name="title_activity_wizard">First Run Wizard</string>
    <string name="wizard_welcome_title">Welcome to Alarm Morning</string>
    <string name="wizard_welcome_description">We will guide you through a basic setup. All the settings can be changed later.</string>
    <string name="wizard_welcome_overwrite_warning">Your current settings will be overwritten.</string>
    <string name="wizard_set_time_title">Set alarm time</string>
    <string name="wizard_set_time_description_top">When do you want the alarm clock to go off on workdays?</string>
    <string name="wizard_set_time_description_bottom">On weekends, the alarm clock will be disabled.</string>
    <string name="wizard_set_holidays_title">Set holidays</string>
    <string name="wizard_set_holidays_description">On holidays, the alarm will be disabled. Select your country.</string>
    <string name="wizard_set_actions_title">Set actions while ringing</string>
    <string name="wizard_set_actions_description">There are also events related to key press and proximity sensor.</string>
    <string name="mute_alarm_for_10_seconds_on_device_move">Mute alarm for 10 seconds on device move</string>
    <string name="snooze_alarm_on_device_flip">Snooze alarm on device flip</string>
    <string name="dismiss_alarm_on_device_shake">Dismiss alarm on device shake</string>
    <string name="wizard_set_features_title">Set advanced alarm clock features</string>
    <string name="wizard_set_features_description">Every evening at <xliff:g example="22:00" id="time">%1$s</xliff:g> do…</string>
    <string name="check_alarm_time">Check that the alarm time is set at least 1 hour before the first appointment</string>
    <string name="play_nighttime_bell">Play nighttime bell (taps bugle call)</string>
    <string name="wizard_set_permissions_title">Allow permissions</string>
    <string name="wizard_set_permissions_description">The following dialogues ask for the permissions the alarm clock needs.</string>
    <string name="wizard_set_permissions_explanation"><![CDATA[
<p>Alarm Morning needs the following permissions to provide full user experience:</p>
<p><b>READ_CALENDAR</b> – to read the calendar events (the information about next appointment is shown while the alarm is ringing)</p>
<p><b>WRITE_EXTERNAL_STORAGE</b> – to install new ringtone (the “Church bell” ringtone is used as default sound for nighttime bell) and logging file</p>
<p><b>ACCESS_FINE_LOCATION</b> – to get the location (the location determines the holidays in your region)</p>
<p><b>INTERNET</b> – to use network (to update the list of holidays)</p>
<p><b>CAMERA</b> – to blink the flashlight when ringing</p>
<p><b>RECORD_AUDIO</b> – to detect the volume of the alarm (used as a reliability check that the alarm is ringing)</p>
]]></string>
    <string name="wizard_set_permission_SYSTEM_ALERT_WINDOW_title">Allow one more permission</string>
    <string name="wizard_set_permission_SYSTEM_ALERT_WINDOW_description">The app needs the \"Display over other apps\" permission to be able to appear when the alarm goes off.\n\nGrant this permission in the next screen.</string>
    <string name="wizard_done_title">You are all set</string>
    <string name="wizard_done_description">Sleep well and don\'t worry about alarm clock management.</string>
    <string name="title_activity_set_alarm_by_voice">Morning alarm by voice</string>
    <string name="blink_set">Set alarm at</string>
    <string name="blink_snooze">Snoozed until</string>
    <string name="blink_dismiss">Dismissed</string>
    <string name="blink_invalid">Invalid command</string>
    <string name="channel_name">The main app channel</string>
    <string name="channel_description">Channel description</string>
    <string name="notification_title">Alarm at <xliff:g example="07:00" id="time">%1$s</xliff:g></string>
    <string name="notification_title_with_name">Alarm at <xliff:g example="07:00" id="time">%1$s</xliff:g> – <xliff:g example="Take the pill" id="name">%2$s</xliff:g></string>
    <string name="notification_text_future">Touch to view all alarms</string>
    <string name="notification_text_ringing">Ringing</string>
    <string name="notification_text_snoozed">Snoozed until <xliff:g example="07:00" id="time">%1$s</xliff:g></string>
    <string name="notification_text_cancelled">Alarm cancelled</string>
    <plurals name="notification_text_skipped_count">
        <item quantity="one">There was %d skipped alarm while the device was off</item>
        <item quantity="other">There were %d skipped alarms while the device was off</item>
    </plurals>
    <string name="notification_text_skipped">%1$s: %2$s</string>
    <string name="widget_alarm_text_none">No alarm</string>
    <string name="widget_alarm_text_later"><xliff:g example="Mon, Tue" id="list">%1$s</xliff:g>, <xliff:g example="Sat" id="dayOfWeek">%2$s</xliff:g></string>
    <string name="notification_check_title_currently_set">Alarm clock currently at <xliff:g example="07:00" id="time">%1$s</xliff:g></string>
    <string name="notification_check_title_currently_unset">Alarm clock currently disabled</string>
    <string name="notification_check_text_with_location">First appointment: <xliff:g example="07:00" id="time">%1$s</xliff:g> <xliff:g example="Dentist" id="title">%2$s</xliff:g> (<xliff:g example="Main St" id="location">%3$s</xliff:g>)</string>
    <string name="notification_check_text_without_location">First appointment: <xliff:g example="07:00" id="time">%1$s</xliff:g> <xliff:g example="Dentist" id="title">%2$s</xliff:g></string>
    <string name="notification_check_text_event_deleted">The appointment that triggered setting the alarm clock was deleted. Check the alarm clock time.</string>
    <string name="notification_check_no_event">There is no appointment in the morning.</string>
    <string name="notification_check_text_set_at">Set to <xliff:g example="07:00" id="time">%1$s</xliff:g></string>
    <string name="notification_check_text_set_dialog">Set…</string>
    <string name="nighttime_bell_toast">Good night</string>
    <string name="alarm_unset">Off</string>
    <string name="alarm_state_changed">Changed</string>
    <string name="alarm_state_passed">Passed</string>
    <string name="alarm_state_ringing">Ringing</string>
    <string name="alarm_state_snoozed">Snoozed until <xliff:g example="07:00" id="time">%1$s</xliff:g></string>
    <string name="alarm_state_dismissed_before_ringing">Dismissed before ringing</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_snooze">Snooze</string>
    <string name="action_nothing">Nothing</string>
    <string name="action_mute_for_10_seconds">Mute for 10 seconds</string>
    <string name="action_set">Set</string>
    <string name="action_set_time">Set time</string>
    <string name="action_disable">Disable</string>
    <string name="action_revert">Revert to time by rule (<xliff:g example="07:00" id="time">%1$s</xliff:g>)</string>
    <string name="action_add_alarm">Add alarm</string>
    <string name="time_to_ring_toast_time">This alarm is set for <xliff:g example="1 day, 2 hours and 3 minutes" id="time">%1$s</xliff:g> from now</string>
    <string name="time_to_ring_toast_off">This alarm is off</string>
    <string name="time_to_ring_toast_passed">This alarm is set to passed time; it will not ring</string>
    <string name="time_to_ring_message_days_and_hours"><xliff:g example="1" id="days">%1$d</xliff:g>d <xliff:g example="2" id="hours">%2$d</xliff:g>h</string>
    <string name="time_to_ring_message_hours_and_minutes"><xliff:g example="2" id="hours">%1$d</xliff:g>h <xliff:g example="3" id="minutes">%2$d</xliff:g>m</string>
    <string name="menu_calendar_title">Scheduled alarms</string>
    <string name="menu_defaults_title">Default alarms</string>
    <string name="menu_settings_title">Settings</string>
    <string name="menu_website_title">Website</string>
</resources>