<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/group1"
        android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_calendar"
            android:title="@string/menu_calendar_title"
            android:icon="@drawable/ic_border_all"/>

        <item
            android:id="@+id/navigation_defaults"
            android:title="@string/menu_defaults_title"
            android:checkable="false"
            android:icon="@drawable/ic_border_clear"/>
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="all">
        <item
            android:id="@+id/navigation_settings"
            android:title="@string/menu_settings_title"
            android:checkable="false"
            android:icon="@drawable/ic_settings"/>
        <item
            android:id="@+id/navigation_website"
            android:title="@string/menu_website_title"
            android:checkable="false"
            android:icon="@drawable/ic_info_outline"/>
    </group>
</menu>