<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/margin_medium"
    android:paddingRight="@dimen/margin_medium">

    <LinearLayout
        android:id="@+id/recommendation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holidays_recommendations"/>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium">

            <LinearLayout
                android:id="@+id/recommendationContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            </LinearLayout>

        </HorizontalScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/holidays_setting"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/holidaySpinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:spinnerMode="dialog"
        android:text="Germany"/>

    <Spinner
        android:id="@+id/holidaySpinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:spinnerMode="dialog"
        android:text="Bavaria"/>

    <Spinner
        android:id="@+id/holidaySpinner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginRight="@dimen/margin_medium"
        android:spinnerMode="dialog"
        android:text="Munich"/>

    <LinearLayout
        android:id="@+id/listOfHolidays"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_medium"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/holidays_list_title"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/listOfHolidaysDetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Date Name"/>

        </ScrollView>

    </LinearLayout>

</LinearLayout>